--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 # python bytecode
 *.py[cod]
+
+# settings
 settings_local.py
 manage_local.py
+config.py
+settings_pro.py
 
 # Vim swap files
 *.swp
