--- a/config/nginx.config
+++ b/config/nginx.config
@@ -39,6 +39,10 @@ http {
         server localhost:3055;
     }
 
+    upstream zzzt-uwsgi {
+        server localhost:3066;
+    }
+
 
     server {
         listen 80;
@@ -62,5 +66,26 @@ http {
 
     }
 
+    server {
+        listen 80;
+        server_name  zzzt.51lkl.club;
+        root /projects/zzzt/lkl;
+
+
+        location /static {
+            alias /projects/zzzt/lkl/static;
+            expires 1d;
+        }
+
+        location / {
+            include     /etc/nginx/uwsgi_params;
+            uwsgi_param SCRIPT_NAME "";
+            client_max_body_size       4m;
+            uwsgi_buffers 8 1m;
+            uwsgi_buffer_size 1m;
+            uwsgi_pass zzzt-uwsgi;
+        }
+
+    }
 
 }
