--- a/config/nginx.config
+++ b/config/nginx.config
@@ -88,4 +88,21 @@ http {
 
     }
 
+    server {
+            listen       80;
+            server_name  shop.51lkl.club;
+            root   /projects/chengxuxia;
+            index  index.html index.htm index.php;
+
+            location ~ .*\.(php|php5)?$
+            {
+                    fastcgi_pass  127.0.0.1:9000;
+                    fastcgi_index index.php;
+                    include /etc/nginx/fastcgi.conf;
+            }
+
+            access_log /var/log/nginx/chengxuxia.log;
+
+    }
+
 }
