--- a/config/nginx.config
+++ b/config/nginx.config
@@ -94,12 +94,23 @@ http {
             root   /projects/chengxuxia;
             index  index.html index.htm index.php;
 
+            location / {
+                index  index.html index.htm index.php;
+                autoindex  on;
+                if (!-e $request_filename) {
+                    rewrite  ^(.*)$  /index.php?s=$1  last;
+                    break;
+                }
+            }
+
             location ~ .*\.(php|php5)?$
             {
                     fastcgi_pass  127.0.0.1:9000;
                     fastcgi_index index.php;
                     include /etc/nginx/fastcgi.conf;
             }
+
+
 
             access_log /var/log/nginx/chengxuxia.log;
 
