--- a/config/nginx.config
+++ b/config/nginx.config
@@ -98,8 +98,7 @@ http {
                 index  index.html index.htm index.php;
                 autoindex  on;
                 if (!-e $request_filename) {
-                    rewrite  ^(.*)$  /index.php?s=$1  last;
-                    break;
+                    rewrite ^(.*)$ /index.php?s=/$1 last;
                 }
             }
 
