--- a/config/nginx.config
+++ b/config/nginx.config
@@ -95,8 +95,10 @@ http {
             index  index.html index.htm index.php;
 
             location / {
+                index index.php;
+
                 if (!-e $request_filename) {
-                    rewrite ^(.*)$ /index.php?s=/$1 last;
+                    rewrite ^(.*)$ /index.php?s=$1 last;
                 }
             }
 
