--- a/config/nginx.config
+++ b/config/nginx.config
@@ -98,7 +98,11 @@ http {
                 index index.php;
 
                 if (!-e $request_filename) {
-                    rewrite ^(.*)$ /index.php?s=$1 last;
+                    rewrite ^(.*)$ /index.php?s=/$1 last;
+                }
+
+                if ($host = 'shop.51lkl.club') {
+                    rewrite ^/(.*)$ http://shop.51lkl.club/$1 permanent;
                 }
             }
 
