--- a/config/nginx.config
+++ b/config/nginx.config
@@ -95,12 +95,16 @@ http {
             index  index.html index.htm index.php;
 
 
-            if (!-e $request_filename) {
-                rewrite ^(.*)$ /index.php?s=/$1 last;
-            }
+            location / {
+                index index.php;
 
-            if ($host = 'shop.51lkl.club') {
-                rewrite ^/(.*)$ http://shop.51lkl.club/$1 permanent;
+                if (!-e $request_filename) {
+                    rewrite ^(.*)$ /index.php?s=/$1 last;
+                }
+
+                if ($host = 'shop.51lkl.club') {
+                    rewrite ^/(.*)$ http://shop.51lkl.club/$1 permanent;
+                }
             }
 
             location ~ .*\.(php|php5)?$
