--- a/config/nginx.config
+++ b/config/nginx.config
@@ -94,6 +94,10 @@ http {
             root   /projects/chengxuxia;
             index  index.html index.htm index.php;
 
+            location /static {
+                alias /projects/chengxuxia/static;
+                expires 1d;
+            }
 
             location / {
                 index index.php;
