--- a/config/nginx.config
+++ b/config/nginx.config
@@ -108,7 +108,16 @@ http {
                     include /etc/nginx/fastcgi.conf;
             }
 
+            location / {
 
+                if (!-e $request_filename) {
+                    rewrite ^(.*)$ /index.php?s=/$1 last;
+                }
+
+                if ($host = 'shop.51lkl.club') {
+                    rewrite ^/(.*)$ http://shop.51lkl.club/$1 permanent;
+                }
+            }
 
 
 
