--- a/config/nginx.config
+++ b/config/nginx.config
@@ -92,7 +92,7 @@ http {
             listen       80;
             server_name  shop.51lkl.club;
             root   /projects/chengxuxia;
-            index  index.html index.htm index.php;
+            index  index.php index.html index.htm;
 
             location /static {
                 alias /projects/chengxuxia/static;
