--- a/config/nginx.config
+++ b/config/nginx.config
@@ -110,6 +110,8 @@ http {
 
             location / {
 
+                try_files $uri $uri /index.php;
+
                 if (!-e $request_filename) {
                     rewrite ^(.*)$ /index.php?s=/$1 last;
                 }
