--- a/config/nginx.config
+++ b/config/nginx.config
@@ -110,8 +110,6 @@ http {
 
             location / {
 
-                try_files $uri $uri /index.php;
-
                 if (!-e $request_filename) {
                     rewrite ^(.*)$ /index.php?s=/$1 last;
                 }
@@ -119,6 +117,8 @@ http {
                 if ($host = 'shop.51lkl.club') {
                     rewrite ^/(.*)$ http://shop.51lkl.club/$1 permanent;
                 }
+
+                index index.php;
             }
 
 
