--- a/config/nginx.config
+++ b/config/nginx.config
@@ -99,6 +99,10 @@ http {
                 expires 1d;
             }
 
+            location /data/uploads {
+                alias /projects/chengxuxia/data/uploads;
+                expires 1d;
+            }
 
 
             location ~ .*\.(php|php5)?$
@@ -117,8 +121,6 @@ http {
                 if ($host = 'shop.51lkl.club') {
                     rewrite ^/(.*)$ http://shop.51lkl.club/$1 permanent;
                 }
-
-                index index.php;
             }
 
 
