--- a/config/nginx.config
+++ b/config/nginx.config
@@ -112,6 +112,11 @@ http {
                     include /etc/nginx/fastcgi.conf;
             }
 
+            location = / {
+                root   /projects/chengxuxia/;
+                index  index.php;
+            }
+
             location / {
 
                 if (!-e $request_filename) {
