--- a/config/nginx.config
+++ b/config/nginx.config
@@ -49,6 +49,10 @@ http {
         server_name  51lkl.club www.51lkl.club;
         root /projects/lakala/lkl;
 
+        location = / {
+            rewrite ^/(.*)$ http://shop.51lkl.club/$1 redirect;
+        }
+
 
         location /static {
             alias /projects/lakala/lkl/static;
