--- a/config/nginx.config
+++ b/config/nginx.config
@@ -103,11 +103,15 @@ http {
                 expires 1d;
             }
 
-            location /data/uploads {
+            location //data/uploads {
                 alias /projects/chengxuxia/data/uploads;
                 expires 1d;
             }
 
+            location //data/uploads {
+                alias /projects/chengxuxia/data/uploads;
+                expires 1d;
+            }
 
             location ~ .*\.(php|php5)?$
             {
