--- a/config/nginx.config
+++ b/config/nginx.config
@@ -108,7 +108,7 @@ http {
                 expires 1d;
             }
 
-            location //data/uploads {
+            location /data/uploads {
                 alias /projects/chengxuxia/data/uploads;
                 expires 1d;
             }
