--- a/config/nginx.config
+++ b/config/nginx.config
@@ -128,7 +128,7 @@ http {
             location / {
 
                 if (!-e $request_filename) {
-                    rewrite ^(.*)$ /index?s=/$1 last;
+                    rewrite ^(.*)$ /index.php?s=/$1 last;
                 }
 
                 if ($host = 'shop.51lkl.club') {
